--- a/template/navbar.html
+++ b/template/navbar.html
@@ -1,15 +1,24 @@
 {% load static %}
 <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand">Mega Store</a>
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="{% url 'store' %}">Store</a></li>
-      </ul>
       <div class="d-flex">
-        <form class="d-flex me-2 align-items-center">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        <a class="navbar-brand">Mega Store</a>
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="{% url 'store' %}">Store</a></li>
+        </ul>
+      </div>
+      <div class="d-flex">
+
+        <div class="d-flex me-3">
+          
+          {% if user.is_authenticated %}
+          <a href="{% url 'logout' %}" class="btn btn-danger">LogOut</a>
+          {% else %}
+          <a href="{% url 'login' %}" class="btn btn-primary">LogIn</a>
+          {% endif %}
+            
+        </div>
+        
         <a class="cart-link d-flex justify-content-end" style="max-width: 100%;">
           <p class="align-items-center cart-counter" style="    
           font-size: 12px;
