--- a/template/navbar.html
+++ b/template/navbar.html
@@ -1,36 +1,44 @@
 {% load static %}
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <div class="d-flex">
         <a class="navbar-brand">Mega Store</a>
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="{% url 'store' %}">Store</a></li>
-        </ul>
-      </div>
-      <div class="d-flex">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
 
-        <div class="d-flex me-3">
-          
-          {% if user.is_authenticated %}
-          <a href="{% url 'logout' %}" class="btn btn-danger">LogOut</a>
-          {% else %}
-          <a href="{% url 'login' %}" class="btn btn-primary">LogIn</a>
-          {% endif %}
+          <ul class="navbar-nav  me-auto mb-2 mb-lg-0 ">
+            <li class="nav-item  nav-list">
+              <a class="nav-link" href="{% url 'store' %}">Store</a>
+            </li>              
+          </ul>
+
             
+          <div class="d-flex">
+    
+            <div class="d-flex me-3">
+              
+              {% if user.is_authenticated %}
+              <a href="{% url 'logout' %}" class="btn btn-danger">LogOut</a>
+              {% else %}
+              <a href="{% url 'login' %}" class="btn btn-primary">LogIn</a>
+              {% endif %}
+                
+            </div>
+            
+            <a class="cart-link d-flex justify-content-end" style="max-width: 100%;">
+              <p class="align-items-center cart-counter" style="    
+              font-size: 12px;
+              position:absolute;
+              background: #ff0000;
+              color: #fff;
+              padding: 0 5px;
+              vertical-align: top;
+              border-radius: 5px;
+              "></p>
+              <img style="max-width: 40px; border-radius: 5px;" src="{% static 'img/cart.jpg' %}" alt="">
+            </a>
+          </div>
         </div>
-        
-        <a class="cart-link d-flex justify-content-end" style="max-width: 100%;">
-          <p class="align-items-center cart-counter" style="    
-          font-size: 12px;
-          position:absolute;
-          background: #ff0000;
-          color: #fff;
-          padding: 0 5px;
-          vertical-align: top;
-          border-radius: 5px;
-          "></p>
-          <img style="max-width: 40px; border-radius: 5px;" src="{% static 'img/cart.jpg' %}" alt="">
-        </a>
-      </div>
     </div>
   </nav>
